# proiecte

LaboratorCSharp/: LaboratorCSharp.sln
LaboratorCSharp/LaboratorCSharp/: Dockerfile  Program.cs
LaboratorCSharp/LaboratorCSharp/Data/: echipe.txt  elevi.txt  jucatori.txt  jucatoriactivi.txt  meciuri.txt
LaboratorCSharp/LaboratorCSharp/UI/: UserInterface.cs
LaboratorCSharp/LaboratorCSharp/domain/: CitireEntitatiDinFisier.cs  Echipa.cs  Elev.cs  Entity.cs  Jucator.cs  JucatorActiv.cs  Meci.cs  Nume.cs  Scoala.cs  Tip.cs
LaboratorCSharp/LaboratorCSharp/domain/validatori/: IValidator.cs  ValidationException.cs  ValidatorEchipa.cs  (+4 more)
LaboratorCSharp/LaboratorCSharp/repository/: FileRepoEchipe.cs  FileRepoElev.cs  FileRepoJucator.cs  FileRepoJucatoriActivi.cs  FileRepoMeci.cs  FileRepository.cs  IRepository.cs  InMemoryRepository.cs
LaboratorCSharp/LaboratorCSharp/service/: Service.cs
RezervareTerenuriSportive/Clase/: add-product-handler.php  add-product.php  element-card.html  getAllProducts.php  getProductById.php  getProductsByCategory.php  login-handler.php  login-page.php  main-view.php  product-details.php  products-by-category.php  signup-handler.php  signup-page.php  style-page.css
RezervareTerenuriSportive/root/: config.php  verifica.php
saVedemProiectul (2)/saVedemProiectul/: CMakeLists.txt  Friendship.cpp  Friendship.h  FriendshipRepo.h  List.h  Message.cpp  Message.h  MessageRepo.h  MultiMap.h  Node.h  Service.h  User.cpp  User.h  UserInterface.h  UserRepo.h  fisierTest.h  main.cpp  readme.txt.txt
temaTrei/: build.gradle  settings.gradle
(+38 files in other folders)
